[project]
name = "llm-llamafile"
version = "0.1"
description = "Access llamafile localhost models via LLM"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm"
]

[project.urls]
Homepage = "https://github.com/simonw/llm-llamafile"
Changelog = "https://github.com/simonw/llm-llamafile/releases"
Issues = "https://github.com/simonw/llm-llamafile/issues"
CI = "https://github.com/simonw/llm-llamafile/actions"

[project.entry-points.llm]
llamafile = "llm_llamafile"

[project.optional-dependencies]
test = ["pytest"]
